# myna

./: .gitignore  README.md  eval_llm.py  model.py  pretrain.py  push_to_hf.py  pyproject.toml  requirements.txt  train.sh  train_dpo.py  train_ppo.py  train_qwen3.py  train_sft.py
configs/: dpo.yaml  ds_stage1.json  ds_stage3.json  ppo.yaml  pretrain.yaml  reason.yaml  sft.yaml
final/dpo/myna_25M/: tokenizer.json  tokenizer_config.json
final/sft/myna_25M/: config.json
myna/: dataset_utils.py  lm_dataset.py  model.py  train_utils.py
myna/common/: config.py
myna/train/: ppo.py  pretrain.py  reason.py  sft.py  train_dpo.py
